@@ -28,8 +28,7 @@ import com.hmdm.plugins.devicelog.guice.module.DeviceLogLiquibaseModule;
 import com.hmdm.plugins.devicelog.guice.module.DeviceLogRestModule;
 import com.hmdm.plugins.devicelog.guice.module.DeviceLogTaskModule;
 import com.hmdm.plugins.devicelog.persistence.DeviceLogPersistenceConfiguration;
-
-import javax.servlet.ServletContext;
+import jakarta.servlet.ServletContext;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -46,12 +45,11 @@ public class DeviceLogPluginConfigurationImpl implements PluginConfiguration {
     /**
      * <p>Constructs new <code>DeviceLogPluginConfigurationImpl</code> instance. This implementation does nothing.</p>
      */
-    public DeviceLogPluginConfigurationImpl() {
-    }
+    public DeviceLogPluginConfigurationImpl() {}
 
     /**
-     * <p>Gets the unique identifier for this plugin. This is a sort of logical name for the plugin which is used widely
-     * by <code>Plugin Platform</code>.</p>
+     * <p>Gets the unique identifier for this plugin. This is a sort of logical name for the plugin which is used widely by
+     * <code>Plugin Platform</code>.</p>
      *
      * @return a plugin identifier.
      */
@@ -74,6 +72,7 @@ public class DeviceLogPluginConfigurationImpl implements PluginConfiguration {
      * <p>Gets the list of modules to be used for initializing the plugin.</p>
      *
      * @param context a context for plugin usage.
+     *
      * @return a list of modules to be used for plugin initialization.
      */
     @Override
@@ -85,8 +84,8 @@ public class DeviceLogPluginConfigurationImpl implements PluginConfiguration {
 
             final String configClass = context.getInitParameter("plugin.devicelog.persistence.config.class");
             if (configClass != null && !configClass.trim().isEmpty()) {
-                DeviceLogPersistenceConfiguration config
-                        = (DeviceLogPersistenceConfiguration) Class.forName(configClass).newInstance();
+                DeviceLogPersistenceConfiguration config = (DeviceLogPersistenceConfiguration)
+                        Class.forName(configClass).getDeclaredConstructor().newInstance();
                 modules.addAll(config.getPersistenceModules(context));
             }
 
@@ -94,10 +93,9 @@ public class DeviceLogPluginConfigurationImpl implements PluginConfiguration {
 
             return modules;
 
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+        } catch (ReflectiveOperationException e) {
             throw new IllegalArgumentException("Could not initialize persistence layer for Device Log plugin", e);
         }
-
     }
 
     /**
@@ -114,13 +112,13 @@ public class DeviceLogPluginConfigurationImpl implements PluginConfiguration {
 
             final String configClass = context.getInitParameter("plugin.devicelog.persistence.config.class");
             if (configClass != null && !configClass.trim().isEmpty()) {
-                DeviceLogPersistenceConfiguration config
-                        = (DeviceLogPersistenceConfiguration) Class.forName(configClass).newInstance();
+                DeviceLogPersistenceConfiguration config = (DeviceLogPersistenceConfiguration)
+                        Class.forName(configClass).getDeclaredConstructor().newInstance();
                 config.getTaskModules(context).ifPresent(modules::addAll);
             }
 
             return Optional.of(modules);
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+        } catch (ReflectiveOperationException e) {
             throw new IllegalArgumentException("Could not get list of task modules for Device Log plugin", e);
         }
     }
